--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,79 @@
 [metadata]
-description-file = README.md
+name = .\dsdev-utils
+version = 1809.1.1
+summary = Add a short description here!
+author = Reynolds, AJ (ar380v)
+author-email = ar380v@us.att.com
+license = none
+home-page = http://...
+description-file = README.rst
+# Add here all kinds of additional classifiers as defined under
+# https://pypi.python.org/pypi?%3Aaction=list_classifiers
+classifier =
+    Development Status :: 4 - Beta
+    Programming Language :: Python
+
+[entry_points]
+# Add here console scripts like:
+# console_scripts =
+#     script_name = dsdev_utils.module:function
+# For example:
+# console_scripts =
+#     fibonacci = dsdev_utils.skeleton:run
+# as well as other entry_points.
+
+
+[files]
+# Add here 'data_files', 'packages' or 'namespace_packages'.
+# Additional data files are defined as key value pairs of target directory
+# and source location from the root of the repository:
+packages =
+    dsdev_utils
+# data_files =
+#    share/dsdev_utils_docs = docs/*
+
+[extras]
+# Add here additional requirements for extra features, like:
+# PDF =
+#    ReportLab>=1.2
+#    RXP
+
+[test]
+# py.test options when running `python setup.py test`
+addopts = tests
+
+[tool:pytest]
+# Options for py.test:
+# Specify command line options as you would do when invoking py.test directly.
+# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
+# in order to write a coverage file that can be read by Jenkins.
+addopts =
+    --cov dsdev_utils --cov-report term-missing
+    --verbose
+
+[aliases]
+docs = build_sphinx
 
 [bdist_wheel]
-universal=1
+# Use this option if your package is pure-python
+universal = 1
 
-[versioneer]
-VCS = git
-style = pep440
-versionfile_source=dsdev_utils/_version.py
-versionfile_build=dsdev_utils/_version.py
-tag_prefix=
-parentdir_prefix=
+[build_sphinx]
+source_dir = docs
+build_dir = docs/_build
+
+[pbr]
+# Let pbr run sphinx-apidoc
+autodoc_tree_index_modules = True
+# autodoc_tree_excludes = ...
+# Let pbr itself generate the apidoc
+# autodoc_index_modules = True
+# autodoc_exclude_modules = ...
+# Convert warnings to errors
+# warnerrors = True
+
+[devpi:upload]
+# Options for the devpi: PyPI server and packaging tool
+# VCS export must be deactivated since we are using setuptools-scm
+no-vcs = 1
+formats = bdist_wheel
