--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = .\dsdev-utils
-version = 1809.1.2
+name = dsdev-utils
+version = 1809.1.3
 summary = Add a short description here!
 author = Reynolds, AJ (ar380v)
 author-email = ar380v@us.att.com
