--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,8 +14,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: [3.6, 3.7, 3.8, 3.9]
-        os: [windows-2016, ubuntu-16.04, macos-10.15]
+        python: [3.8, 3.9, 3.10, 3.11, 3.12]
+        os: [windows-2019, ubuntu-20.04, macos-11]
 
     steps:
       - uses: actions/checkout@v2
