--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,5 +29,4 @@ jobs:
         run: pip install -e .
       - name: Run Tox
         # Run tox using the version of Python in `PATH`
-        run: tox -e py
-      - uses: codecov/codecov-action@v1
+        run: tox -e p
