fix tox command

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,9 +18,9 @@ jobs:
         os: [windows-2019, ubuntu-20.04, macos-11]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
       - name: Install Tox and any other packages
@@ -29,4 +29,4 @@ jobs:
         run: pip install -e .
       - name: Run Tox
         # Run tox using the version of Python in `PATH`
-        run: tox -e p
+        run: tox
